--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -45,7 +45,9 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: macos-build
-        path: 'platform/macos/Yomitan API (rs) Installer.app'
+        path: |
+          'platform/macos/Yomitan API (rs) Installer.app'
+          'platform/macos/README.txt'
         if-no-files-found: error
     
     - name: Upload artifacts (Windows x86_64)
